# paperoni

./: .gitignore  Cargo.toml  LICENSE  README.md  out.epub
src/: cli.rs  cli_config.yml  epub.rs  errors.rs  extractor.rs  html.rs  http.rs  logs.rs  main.rs
src/assets/: body.min.css  headers.min.css  writ.min.css
src/moz_readability/: mod.rs  regexes.rs
test_html/: simple.html
