[package]
description = "A web article downloader"
homepage = "https://github.com/hipstermojo/paperoni"
repository = "https://github.com/hipstermojo/paperoni"
name = "paperoni"
version = "0.3.0-alpha1"
authors = ["Kenneth Gitere <gitere81@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.7.0"
clap = "2.33.3"
epub-builder = "0.4.8"
futures = "0.3.12"
html5ever = "0.25.1"
kuchiki = "0.8.1"
lazy_static = "1.4.0"
md5 = "0.7.0"
regex = "1.4.2"
surf = "2.1.0"
thiserror = "1.0.24"
url = "2.2.0"
